--- a/Client/Pages/FetchData.razor
+++ b/Client/Pages/FetchData.razor
@@ -1,12 +1,14 @@
 @page "/fetchdata"
-@using BlazorApp.Shared 
+@using BlazorApp.Shared
+@using BlazorApp.Client.Api 
+@using common.sismo.models
 @inject HttpClient Http
-
+@inject ProjectApi projectApi 
 <h1>Weather forecast</h1>
 
 <p>This component demonstrates fetching data from the server.</p>
 
-@if (forecasts == null)
+@if (projects == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -22,13 +24,11 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var forecast in forecasts)
+            @foreach (var p in projects)
             {
                 <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
+                    <td>@p.ProjectId</td>
+                    <td>@p.Name</td>
                 </tr>
             }
         </tbody>
@@ -37,16 +37,21 @@ else
 
 @code {
     private WeatherForecast[] forecasts;
-
+    private List<SeismicProjectModel> projects;
     protected override async Task OnInitializedAsync()
     {
-      try
-      {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("/api/WeatherForecast");
-      }
-      catch (Exception ex)
-      {
-        Console.WriteLine(ex.ToString());
-      }
+        try
+        {
+            var result = await projectApi.ListAsync();
+            if (result.StatusCode == 200)
+            {
+                projects = result.Data;
+            }
+            //forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("/api/WeatherForecast");
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine(ex.ToString());
+        }
     }
 }
